--- a/code/dev/parts/domains/domain-lua-scripting/domain-lua-code-block.tpl.html
+++ b/code/dev/parts/domains/domain-lua-scripting/domain-lua-code-block.tpl.html
@@ -1,28 +1,38 @@
 <div class="domain-lua-code-block" ng-form="blockEditForm">
   <div class="form-group form-inline">
-    <label for="customVcl" class="col-sm-3 control-label" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the switch to enable/disable the execution of this specific code snippet">
+    <label for="customVcl" class="col-sm-3 control-label">
       Enable This Code Block
     </label>
     <div class="col-md-9">
       <toggle-switch name="customVcl" is-disabled="_loading" ng-model="$ctrl.luaBlock.enable" on-label="On" off-label="Off">
       </toggle-switch>
+      <label for="customVcl" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Use the switch to enable/disable the execution of this specific code snippet">
+        <i class="fa fa-question-circle"></i>
+      </label>
     </div>
   </div>
   <div class="form-group" ng-class="{'has-error': blockEditForm.luaBPlocation.$invalid && blockEditForm.luaBPlocation.$dirty}">
-    <label for="luaBPlocation" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Specify here a website path (like “/my_url/”) the Lua code should be executed for">URL Location *</label>
+    <label for="luaBPlocation" class="col-sm-3 control-label">URL Location *</label>
     <div class="col-sm-9">
-      <input type="text" class="form-control" ng-disabled="_loading" ng-model="$ctrl.luaBlock.location" name="luaBPlocation" placeholder="like \" /my_url/\ "" ng-maxlength="150" required>
+      <input type="text" class="form-control inline-block" ng-disabled="_loading" ng-model="$ctrl.luaBlock.location" name="luaBPlocation" placeholder="like \" /my_url/\ "" ng-maxlength="150" required>
+      <label for="luaBPlocation" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Specify here a website path (like “/my_url/”) the Lua code should be executed for">
+        <i class="fa fa-question-circle"></i>
+      </label>
       <div class="error-messages" ng-messages="blockEditForm.luaBPlocation.$error" role="alert" ng-messages-multiple>
         <div ng-messages-include="parts/shared/error-messages.html"></div>
       </div>
     </div>
   </div>
   <div class="form-group" ng-class="{'has-error': blockEditForm.luaBlockCode.$invalid && blockEditForm.luaBlockCode.$dirty}">
-    <label for="luaBlockCode" class="col-sm-3 control-label" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Provide here a Lua code which should be executed for the specific website location">
-      Lua Code *</label>
+    <label for="luaBlockCode" class="col-sm-3 control-label">Lua Code *</label>
     <div class="col-sm-9">
-      <textarea name="luaBlockCode" ng-model="$ctrl.luaBlock.code" placeholder="" class="form-control text--courier" ng-disabled="_loading" required=>
-      </textarea>
+      <div class="col-sm-12 form-group">
+        <textarea name="luaBlockCode" ng-model="$ctrl.luaBlock.code" placeholder="" class="form-control text--courier inline-block" ng-disabled="_loading" required=>
+        </textarea>
+        <label for="luaBlockCode" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Provide here a Lua code which should be executed for the specific website location">
+          <i class="fa fa-question-circle"></i>
+        </label>
+      </div>
       <div class="error-messages" ng-messages="blockEditForm.luaBlockCode.$error" role="alert" ng-messages-multiple>
         <div ng-messages-include="parts/shared/error-messages.html"></div>
       </div>
