Rename field 'Subscriber Since' to 'Last Renewal Date'

--- a/code/dev/parts/profile/directives/subscription-summary.tpl.html
+++ b/code/dev/parts/profile/directives/subscription-summary.tpl.html
@@ -17,7 +17,7 @@
         <td>{{subscription.balance_in_cents | MonetaryUnit| currency }}</td>
       </tr>
       <tr>
-        <td>Subscriber Since</td>
+        <td>Last Renewal Date</td>
         <td>{{subscription.current_period_started_at | date}} </td>
       </tr>
       <tr>
