--- a/code/dev/parts/apps/new.html
+++ b/code/dev/parts/apps/new.html
@@ -40,18 +40,21 @@
       <div class="panel-body">
         <form name="createForm" class="form-horizontal" novalidate>
           <div class="form-group" ng-class="{'has-error': createForm.app_name.$invalid && createForm.app_name.$dirty}">
-            <label for="app_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter a name for the app to be registered (50 characters max). Duplicate
-              application names are not allowed.">App Name *
+            <label for="app_name" class="col-sm-2 control-label">App Name *
             </label>
             <div class="col-sm-10">
-              <input type="text" name="app_name" class="form-control" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" placeholder="App name (for example, 'MyCoolApp')" ng-pattern="NO_SPECIAL_CHARS" required>
+              <input type="text" name="app_name" class="form-control inline-block" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name" placeholder="App name (for example, 'MyCoolApp')" ng-pattern="NO_SPECIAL_CHARS" required>
+              <label for="app_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter a name for the app to be registered (50 characters max). Duplicate
+              application names are not allowed.">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="createForm.app_name.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
           <div class="form-group " ng-if="companies.length> 1" ng-class="{'has-error': createForm.accountId.$invalid && createForm.accountId.$dirty}">
-            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select company name the domain should be associated with">Account *</label>
+            <label for="account_id" class="col-sm-2 control-label">Account *</label>
             <div class="col-sm-10">
               <ui-select ng-model="model.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" name="accountId" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id">
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
@@ -59,6 +62,9 @@
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              <label for="account_id" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select company name the domain should be associated with">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="createForm.accountId.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -87,8 +93,13 @@
           <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid && createForm.comment.$dirty }">
             <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the app (300 characters max)">Comment</label>
             <div class="col-sm-10">
-              <textarea id="comment" placeholder="Comment" ng-maxlength="300" class="form-control" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
-              </textarea>
+              <div class="col-sm-12 form-group">
+                <textarea id="comment" placeholder="Comment" ng-maxlength="300" class="form-control inline-block" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
+                </textarea>
+                <label for="comment" class="text-info" popover-trigger="mouseenter" uib-popover="Enter a free-text comment about the app (300 characters max)">
+                  <i class="fa fa-question-circle"></i>
+                </label>
+              </div>
               <div class="error-messages" ng-messages="createForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
