--- a/code/dev/parts/ssl_certs/edit.html
+++ b/code/dev/parts/ssl_certs/edit.html
@@ -22,16 +22,19 @@
       <div class="panel-body">
         <form class="form-horizontal" name="editForm">
           <div class="form-group" ng-class="{ 'has-error': editForm.cert_name.$invalid && editForm.cert_name.$dirty }">
-            <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Certificate name (150 characters max)">Certificate Name *</label>
+            <label for="cert_name" class="col-sm-2 control-label">Certificate Name *</label>
             <div class="col-sm-10">
-              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.cert_name" name="cert_name" id="cert_name" placeholder="Certificate Name" ng-pattern="NO_SPECIAL_CHARS" ng-maxlength="150" required>
+              <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="model.cert_name" name="cert_name" id="cert_name" placeholder="Certificate Name" ng-pattern="NO_SPECIAL_CHARS" ng-maxlength="150" required>
+              <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Certificate name (150 characters max)">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="editForm.cert_name.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()" ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty }">
-            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select account name the SSL certificate should be associated with">Account *</label>
+            <label for="account_id" class="col-sm-2 control-label">Account *</label>
             <div class="col-sm-10">
               <ui-select ng-model="model.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId" required>
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
@@ -39,40 +42,55 @@
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              <label for="account_id" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select account name the SSL certificate should be associated with">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
           <div class="form-group" ng-if="auth.isRevadmin()" ng-class="{ 'has-error': editForm.certTypeId.$invalid && editForm.certTypeId.$dirty }">
-            <label for="cert_type_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Select Certificate Type">Certificate Type</label>
+            <label for="cert_type_id" class="col-sm-2 control-label">Certificate Type</label>
             <div class="col-sm-10">
-              <select class="form-control" ng-disabled="_loading" ng-model="model.cert_type" id="cert_type_id" name="certTypeId" ng-options="obj.id as obj.typeName for obj in certs_types" required>
+              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.cert_type" id="cert_type_id" name="certTypeId" ng-options="obj.id as obj.typeName for obj in certs_types" required>
                 <option value="">--- Select Certificate Type ---</option>
               </select>
+              <label for="cert_type_id" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Select Certificate Type">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="editForm.certTypeId.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
-          <div class="form-group" ng-class="{ 'has-error': editForm.public_ssl_cert.$invalid && editForm.public_ssl_cert.$dirty }">
-            <label for="public_ssl_cert" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Public and intermediate SSL certificates in PEM format">Public And Intermediate Certificates *
+          <div class="form-group" ng-class="{'has-error': editForm.public_ssl_cert.$invalid && editForm.public_ssl_cert.$dirty}">
+            <label for="public_ssl_cert" class="col-sm-2 control-label">Public And Intermediate Certificates *
               <br><small>(in PEM format)</small></label>
             <div class="col-md-10">
-              <textarea id="public_ssl_cert" placeholder="Public Certificate" class="form-control text--courier" name="public_ssl_cert" ng-model="model.public_ssl_cert" ng-disabled="_loading" ng-maxlength="10000" required>
-              </textarea>
+              <div class="col-sm-12 form-group">
+                <textarea id="public_ssl_cert" placeholder="Public Certificate" class="form-control text--courier inline-block" name="public_ssl_cert" ng-model="model.public_ssl_cert" ng-disabled="_loading" ng-maxlength="10000" required>
+                </textarea>
+                <label for="public_ssl_cert" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Public and intermediate SSL certificates in PEM format">
+                  <i class="fa fa-question-circle"></i>
+                </label>
+              </div>
               <div class="error-messages" ng-messages="editForm.public_ssl_cert.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
-          <div class="form-group" ng-class="{ 'has-error': editForm.private_ssl_key.$invalid &&
-                                      editForm.private_ssl_key.$dirty }">
-            <label for="private_ssl_key" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Private SSL key in PEM format">Private Key *
+          <div class="form-group" ng-class="{ 'has-error': editForm.private_ssl_key.$invalid && editForm.private_ssl_key.$dirty }">
+            <label for="private_ssl_key" class="col-sm-2 control-label">Private Key *
               <br><small>(in PEM format, unencrypted)</small></label>
             <div class="col-md-10">
-              <textarea id="private_ssl_key" placeholder="Private Key" class="form-control text--courier" name="private_ssl_key" ng-model="model.private_ssl_key" ng-disabled="_loading" ng-maxlength="10000" required>
-              </textarea>
+              <div class="col-sm-12 form-group">
+                <textarea id="private_ssl_key" placeholder="Private Key" class="form-control text--courier inline-block" name="private_ssl_key" ng-model="model.private_ssl_key" ng-disabled="_loading" ng-maxlength="10000" required>
+                </textarea>
+                <label for="private_ssl_key" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Private SSL key in PEM format">
+                  <i class="fa fa-question-circle"></i>
+                </label>
+              </div>
               <div class="error-messages" ng-messages="editForm.private_ssl_key.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -94,10 +112,15 @@
             </div>
           </div> -->
           <div class="form-group" ng-class="{'has-error': editForm.comment.$invalid && editForm.comment.$dirty }">
-            <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" uib-popover="Comment">Comment</label>
+            <label for="comment" class="col-sm-2 control-label">Comment</label>
             <div class="col-md-10">
-              <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-maxlength="300">
-              </textarea>
+              <div class="col-sm-12 form-group">
+                <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control inline-block" name="comment" ng-model="model.comment" ng-disabled="_loading" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-maxlength="300">
+                </textarea>
+                <label for="comment" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Comment">
+                  <i class="fa fa-question-circle"></i>
+                </label>
+              </div>
               <div class="error-messages" ng-messages="editForm.comment.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
