--- a/code/dev/parts/ssl_names/new.html
+++ b/code/dev/parts/ssl_names/new.html
@@ -34,16 +34,19 @@
       <div class="panel-body ssl-names">
         <form class="form-horizontal ssl-names--new-form" name="createForm">
           <div class="form-group" ng-class="{ 'has-error': createForm.sslName.$invalid && createForm.sslName.$dirty }">
-            <label for="cert_name" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Enter here a specific domain name (like “www.example.com”) or wildcard name (like “*.example.com”) to be added to RevAPM’s shared SSL certificate. You should be able to verify the control of the domain name.">Regular or Wildcard Domain Name *</label>
+            <label for="cert_name" class="col-sm-3 control-label">Regular or Wildcard Domain Name *</label>
             <div class="col-sm-9">
-              <input type="text" autofocus class="form-control" ng-disabled="_loading" ng-model="model.ssl_name" name="sslName" id="cert_name" placeholder="Domain Name"  validate-domain-name-regular-or-wildcard-domains ng-maxlength="150" required>
+              <input type="text" autofocus class="form-control inline-block" ng-disabled="_loading" ng-model="model.ssl_name" name="sslName" id="cert_name" placeholder="Domain Name" validate-domain-name-regular-or-wildcard-domains ng-maxlength="150" required>
+              <label for="cert_name" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Enter here a specific domain name (like “www.example.com”) or wildcard name (like “*.example.com”) to be added to RevAPM’s shared SSL certificate. You should be able to verify the control of the domain name.">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="createForm.sslName.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
           <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()" ng-class="{ 'has-error': createForm.accountId.$invalid && createForm.accountId.$dirty }">
-            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Select account name the SSL name should be associated with">Account *</label>
+            <label for="account_id" class="col-sm-3 control-label">Account *</label>
             <div class="col-sm-9">
               <ui-select ng-model="model.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId" ng-required="true">
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
@@ -51,6 +54,9 @@
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              <label for="account_id" class="text-info" popover-trigger="mouseenter" popover-append-to-body="{{true}}" uib-popover="Select account name the SSL name should be associated with" class="fa fa-question-circle">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="createForm.accountId.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -64,7 +70,8 @@
                 <div class="col-sm-12">
                   <input type="hidden" ng-model="model.verification_method" required="" name="verificationMethod">
                   <label class="radio">
-                    <input type="radio" ng-model="model.verification_method" value="url"> A Meta-tag On Home HTML Page (URL Verification) <i class="fa fa-question-circle" popover-trigger="mouseenter" uib-popover="This method is suitable if you have a website provisioned on the domain - we will ask you to add a special verification meta-tag in the “<head>” section of the website’s home page (“/”)"> </i></label>
+                    <input type="radio" ng-model="model.verification_method" value="url"> A Meta-tag On Home HTML Page (URL Verification) <i class="fa fa-question-circle" popover-trigger="mouseenter" uib-popover="This method is suitable if you have a website provisioned on the domain - we will ask you to add a special verification meta-tag in the “<head>” section of the website’s home page (“/”)">
+                    </i></label>
                   <label class="radio">
                     <input type="radio" ng-model="model.verification_method" value="dns"> A TXT DNS record (DNS Verification) <i popover-trigger="mouseenter" uib-popover="This domain control verification method will require you to add a new TXT record to the domain name" class="fa  fa-question-circle"></i>
                   </label>
