--- a/code/dev/parts/dns_zone_records/edit.html
+++ b/code/dev/parts/dns_zone_records/edit.html
@@ -60,24 +60,31 @@
       <div class="panel-body">
         <form class="form-horizontal" name="editForm">
           <div class="form-group form-inline" ng-show="record.link==null">
-            <label for="recordTtl" class="control-label col-sm-2" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Optional; if not set, the default TTL for the {{zone}} zone will be used.">
-              TTL </label>
+            <label for="recordTtl" class="control-label col-sm-2">TTL </label>
             <div class="col-sm-10">
-              <input name="recordTtl" type="number" min="0" max="2147483647" class="form-control" placeholder="20" ng-model="record.ttl"> (seconds)
+              <input name="recordTtl" type="number" min="0" max="2147483647" class="form-control inline-block" placeholder="20" ng-model="record.ttl"> (seconds)
+              <label for="recordTtl" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Optional; if not set, the default TTL for the {{zone}} zone will be used.">
+                <i class="fa fa-question-circle"></i>
+              </label>
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label col-sm-2" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="If enabled, edns-client-subnet data will be used with compatible filters. edns-client-subnet results in more accurate routing, but increased query counts, so disabling this option will reduce queries at the cost of accuracy.">
-              Use Client Subnet</label>
+            <label class="control-label col-sm-2">Use Client Subnet</label>
             <div class="col-sm-10">
               <toggle-switch is-disabled="_loading" ng-model="record.use_client_subnet" on-label="Yes" off-label="No">
               </toggle-switch>
+              <label class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="If enabled, edns-client-subnet data will be used with compatible filters. edns-client-subnet results in more accurate routing, but increased query counts, so disabling this option will reduce queries at the cost of accuracy.">
+                <i class="fa fa-question-circle"></i>
+              </label>
             </div>
           </div>
           <div class="form-group" ng-show="record.link!=null">
-            <label for class="control-label col-sm-2" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The FQDN of the record (in NS1 platform) holding the configuration this link should use.">Link Target</label>
+            <label for class="control-label col-sm-2">Link Target</label>
             <div class="col-sm-10">
-              <input type="text" class="form-control" placeholder="target.example.com" ng-model="record.link">
+              <input type="text" class="form-control inline-block" placeholder="target.example.com" ng-model="record.link">
+              <label for class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The FQDN of the record (in NS1 platform) holding the configuration this link should use.">
+                <i class="fa fa-question-circle"></i>
+              </label>
             </div>
           </div>
           <!-- Answers -->
