--- a/code/dev/parts/keys/edit.html
+++ b/code/dev/parts/keys/edit.html
@@ -27,15 +27,10 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="ok()">
           <div class="form-group" ng-class="{'has-error': editForm.keyName.$invalid && editForm.keyName.$dirty}">
-            <label for="keyName"
-              class="col-sm-2 control-label"
-              popover-trigger="mouseenter"
-              uib-popover="API key name (30 characters max)"
-            >API Key Name</label>
-
+            <label for="keyName" class="col-sm-2 control-label">API Key Name</label>
             <div class="col-sm-10">
               <input type="text"
-                     class="form-control"
+                     class="form-control inline-block"
                      ng-model="key.key_name"
                      id="key_name"
                      name="keyName"
@@ -43,15 +38,19 @@
                      ng-pattern="NO_SPECIAL_CHARS"
                      ng-maxlength="30"
                      placeholder="Api Key name" required>
+              <label for="keyName"
+              class="text-info"
+              popover-trigger="mouseenter"
+              uib-popover="API key name (30 characters max)">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="editForm.keyName.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
           <div class="form-group">
-            <label for="key"
-                   class="col-sm-2 control-label"
-            >API Key</label>
+            <label for="key" class="col-sm-2 control-label">API Key</label>
 
             <div class="col-sm-10">
               <button class="btn btn-primary" clipboard text="key.key" on-copied="copyCallback()" on-error="copyCallback(err)" style="vertical-align: initial;"  uib-tooltip="Click to copy the key to the clipboard" tooltip-placement="top"><i class="fa fa-files-o"></i></button>
@@ -62,32 +61,37 @@
           </div>
           <!-- TODO: change rule ng-hide on isAdmin (?)-->
           <div class="form-group" ng-hide="!companies || companies.length == 1"  ng-class="{'has-error': editForm.accountId.$invalid && editForm.accountId.$dirty}">
-            <label for="account_id"
-                   class="col-sm-2 control-label">Account</label>
-            <div class="col-sm-4">
+            <label for="account_id" class="col-sm-2 control-label">Account</label>
+            <div class="col-sm-10">
                <ui-select ng-model="key.account_id" theme="select2" ng-animate-disabled ng-disabled="_loading" on-select="onAccountSelect($model)" style="min-width: 550px;" id="account_id" name="accountId" required>
                 <ui-select-match placeholder="Select Account">{{$select.selected.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              <label for="account_id"  class="text-info" popover-trigger="mouseenter"  popover-append-to-body="true" uib-popover="Select company name the API key should be associated with TODO REVIEW TEXT">
+                <i class="fa fa-question-circle"></i>
+              </label>
               <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
             </div>
           </div>
           <!-- For "reseller" and "revadmin" multiple select accounts (managed_account_ids)-->
-          <div class="form-group" ng-hide="!companies || companies.length == 1"  ng-class="{'has-error': editForm.managedAccountIds.$invalid && editForm.managedAccountIds.$dirty}" ng-if="!_loading && companies.length>0 && (userService.isReseller() || userService.isRevadmin())">
-            <label for="account_id"
-                   class="col-sm-2 control-label">Additional Accounts To Manage</label>
-            <div class="col-sm-4">
-            <span ng-show="!_loading && companies.length==0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
-              <ui-select multiple ng-animate-disabled theme="bootstrap" ng-model="key.managed_account_ids" ng-disabled="_loading" style="min-width: 550px;" id="managed_account_ids" name="managedAccountIds">
+          <div class="form-group" ng-hide="!companies || companies.length == 1"  ng-class="{'has-error': editForm.managedAccountIds.$invalid && editForm.managedAccountIds.$dirty}" ng-if="companies.length>0 && (userService.isReseller() || userService.isRevadmin())">
+            <label for="account_id" class="col-sm-2 control-label">Additional Accounts To Manage</label>
+            <div class="col-sm-10">
+            <span ng-show="_loading && companies.length>0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
+              <ui-select class="inline-block" multiple ng-animate-disabled theme="bootstrap" ng-model="key.managed_account_ids" ng-disabled="_loading" style="min-width: 550px;" id="managed_account_ids" name="managedAccountIds" ng-if="!_loading && companies.length>0">
                 <ui-select-match placeholder="Add account to manage ...">{{$item.companyName}}</ui-select-match>
                 <ui-select-choices repeat="item.id as item in companies | filter: {companyName: $select.search}">
                   <div ng-bind-html="item.companyName|highlight: $select.search"></div>
                 </ui-select-choices>
               </ui-select>
+              <label for="domains" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Additional Accounts To Manage TODO REVIEW TEXT">
+                    <i class="fa fa-question-circle"></i>
+              </label>
+
               <div class="error-messages" ng-messages="editForm.accountId.$error" role="alert" ng-messages-multiple>
                 <div ng-messages-include="parts/shared/error-messages.html"></div>
               </div>
@@ -119,13 +123,11 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="domains"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="Managed Domains">Managed Domains</label>
-
+            <label for="domains" class="col-sm-2 control-label">Managed Domains</label>
             <div class="col-sm-10">
+              <span ng-show="_loading && selectedDomains.length>0" class="loader--waite-company" ><i class="glyphicon glyphicon-refresh spin"></i> Please wait...</span>
               <ui-select id="domains"
+                        class="inline-block"
                          multiple
                          ng-disabled="_loading"
                          ng-model="key.domains"
@@ -135,18 +137,18 @@
                   <small>{{item.domain_name}}</small>
                 </ui-select-choices>
               </ui-select>
+              <label for="domains" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Managed Domains">
+                    <i class="fa fa-question-circle"></i>
+              </label>
             </div>
           </div>
 
           <hr>
           <div class="form-group">
-            <label popover-append-to-body="{{true}}"
-                   class="col-sm-2 control-label"
-                   popover-trigger="mouseenter"
-                   uib-popover="Permissions">Permissions</label>
+            <label class="col-sm-2 control-label">Permissions</label>
 
             <div class="col-sm-10">
-                <div class="col-sm-10">
+                <div class="col-sm-2 inline-block">
                   <input type="checkbox" ng-model="key.allowed_ops.read_config" ng-disabled="_loading"> Read <br>
                   <input type="checkbox" ng-model="key.allowed_ops.modify_config" ng-disabled="_loading"> Modify <br>
                   <input type="checkbox" ng-model="key.allowed_ops.delete_config" ng-disabled="_loading"> Delete <br>
@@ -154,6 +156,14 @@
                   <input type="checkbox" ng-model="key.allowed_ops.reports" ng-disabled="_loading"> Reports <br>
                   <input type="checkbox" ng-model="key.allowed_ops.admin" ng-disabled="_loading"> Admin <br>
                 </div>
+                <label popover-append-to-body="{{true}}"
+                   class="text-info"
+                   popover-append-to-body="{{true}}"
+                   popover-trigger="mouseenter"
+                   uib-popover="Permissions">
+                    <i class="fa fa-question-circle"></i>
+                </label>
+
             </div>
           </div>
           <hr>
