--- a/code/dev/parts/reports/filters/mobile-traffic-filters.html
+++ b/code/dev/parts/reports/filters/mobile-traffic-filters.html
@@ -2,7 +2,7 @@
   <form class="form-inline">
     <div class="form-group">
       <select class="form-control fixed135"
-              ng-model="span">
+              ng-model="ngFilters.delay">
         <option value="1">Last 1 Day</option>
         <option value="7">Last 7 Days</option>
         <option value="30">Last 30 Days</option>
