--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -170,13 +170,13 @@ specify '11.11.11.11' in origin server name field above and 'www.example.com' in
                 Cancel
               </a>
               <button class="btn btn-success" id="create_domain"
-                      ng-disabled="disableSubmit(model) || createForm.$invalid" ng-click="createDomain(model, false)">
+                      ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model) || createForm.$invalid || isReadOnly()" ng-click="createDomain(model, false)">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Create Domain
               </button>
               <button class="btn btn-success" id="create_domain_and_add_more"
-                      ng-disabled="disableSubmit(model) || createForm.$invalid" ng-click="createDomain(model, true);createForm.$setPristine()">
+                      ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="disableSubmit(model) || createForm.$invalid || isReadOnly()" ng-click="createDomain(model, true);createForm.$setPristine()">
                 <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                 <i class="glyphicon glyphicon-ok" ng-if="!_loading"></i>&nbsp;
                 Create And Add More
